# artha-ml

./: .gitignore  README.md  app.py  app_hf.py  main.py  pyproject.toml
arthaml/: inference.py
arthaml/data/: dataset.py  vocabulary.py
arthaml/evaluation/: __init__.py  bleu.py
arthaml/models/: decoder.py  encoder.py  seq2seq.py
scripts/: build_vocab.py  clean_data.py  load_data.py  train.py  translate.py  verify_dataloader.py  verify_model.py
