[project]
name = "artha-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.16.0",
    "gradio",
    "sacrebleu",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
